--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"></script>
 
-	    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>	
+	    <script type="text/javascript" src="{{ url_for('static', filename='js/ext/bootstrap.min.js') }}"></script>	
 
     </head>
 
