refactor: more testing on mithril functionality

--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -3,10 +3,10 @@
 {% block body %}
 
 <div id="map"></div>
-
-
-<!-- <svg id="overlay" viewbox="0 0 1920 1080" preserveAspectRatio="xMinYMin slice">
-    <path class="rs-overlay" d="M 0,0 H1920 V1080 H0z M960 260 a 200,200 0 1,0 4,0 a 1,1 0 1,0 -4,0" />
-</svg> -->
+<svg id="svg" class="overlay" width="100%" height="100%">
+    <path/>
+</svg>
+<div id="test"></div>
+<div class="test2"></div>
 
 {% endblock %}
