--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -17,15 +17,14 @@ div {
     z-index: 1;
 }
 
-#overlay {
+.overlay {
     position: absolute;
     top: 0;
-    left: -100vw;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: 2;
-    margin: 0;
-    padding: 0;
+    display: none;
 }
 
 
