--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -6,7 +6,10 @@
 <svg id="svg" class="overlay" width="100%" height="100%">
     <path/>
 </svg>
-<div id="test"></div>
-<div class="test2"></div>
+<div id="rs-coordinates"></div>
+
+
+<!-- <div id="test"></div>
+<div class="test2"></div> -->
 
 {% endblock %}
