--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -11,9 +11,12 @@
 
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Nunito+Sans:wght@200;600;800&display=swap" rel="stylesheet">
+        
     </head>
 
     <body> 
+        {% include 'components/navigation.html' %}
         {% block body %}
         
         {% endblock %}
