feat: moveover, stein

--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -7,6 +7,8 @@
     <path/>
 </svg>
 <div id="rs-coordinates"></div>
+<div id="rs-content"></div>
+<div id="rs-footer"></div>
 
 
 <!-- <div id="test"></div>
