fix: delay after zoom

--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div id="map"></div>
-<svg id="svg" class="overlay" width="100%" height="100%" preserveAspectRatio="clip">
+<svg id="svg" class="overlay" width="100%" height="100%">
     <path/>
 </svg>
 <div id="rs-coordinates"></div>
