feat: scroll timeline

--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -10,6 +10,7 @@
 <div id="rs-content"></div>
 <div id="rs-footer"></div>
 
+<div id="rs-scroll"></div>
 
 <!-- <div id="test"></div>
 <div class="test2"></div> -->
