--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -8,6 +8,7 @@ body {
     width:100vw;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 div {
@@ -74,6 +75,8 @@ h4.active {
     z-index: 3;
     text-align: center;
     color: white;
+    opacity: 0;
+    display: none;
 }
 
 .rs-content img {
