--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -4,7 +4,7 @@
 
 <div id="map"></div>
 <svg id="svg" class="overlay" width="100%" height="100%">
-    <path/>
+    <path id="svg-path" />
 </svg>
 <div id="rs-coordinates"></div>
 <div id="rs-content"></div>
