fix: updates for usability to push

--- a/project/templates/components/navigation.html
+++ b/project/templates/components/navigation.html
@@ -1,7 +1,7 @@
 <div id="rs-navigation">
     <div> 
         <img src="{{ url_for('static', filename='img/logo.png') }}"/>
-        <span id="rs-reisesteine">REISESTEINE</span>
+        <span id="rs-reisesteine" style="cursor:pointer;">REISESTEINE</span>
         <span>ÜBER UNS</span>
     </div>
     <div>
