--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -143,7 +143,7 @@ h4.active {
     left: 0;
     height: 120px;
     width: 100vw;
-    background-image: linear-gradient(to bottom, rgba(256, 256, 256, 1) 0%, rgba(256, 256, 256, 0.9) 75%, rgba(256, 256, 256, 0));
+    background-color: white;
     z-index: 4;
     display: flex;
     flex-wrap: nowrap;
@@ -182,7 +182,7 @@ h4.active {
 }
 
 #rs-navigation.active {
-    background-image: linear-gradient(to bottom, rgba(0,0,0, 0.2) 0%, rgba(0,0,0, 0.1) 75%, rgba(0,0,0, 0));
+    background-color: transparent!important;
     color: white!important;
 }
 
