--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -79,8 +79,12 @@ h4.active {
 }
 
 .rs-content>div {
+    position:absolute;
     width: 100%;
-    margin-bottom: 300px;
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 200;
+    font-size: 1.4rem;
+    opacity: 0;
 }
 
 .rs-content img {
