fix: several smaller fixes to finish first draft

--- a/project/blueprints/reisesteine/templates/reisesteine/backend/listSteine.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/backend/listSteine.html
@@ -9,12 +9,12 @@
                 <div class="form-row align-items-center">
                     <div class="col-sm-3 my-1">
                         <label class="sr-only" for="inlineFormInputName">Gestein</label>
-                        <input name="gestein" type="text" class="form-control" id="inlineFormInputName" placeholder="Gestein">
+                        <input name="gestein" type="text" class="form-control" id="inlineFormInputName" placeholder="Gestein" required>
                     </div>
                     <div class="col-sm-3 my-1">
                         <label class="sr-only" for="inlineFormInputGroupUsername">Email Einsender</label>
                         <div class="input-group">
-                            <input name="email" type="text" class="form-control" id="inlineFormInputGroupUsername" placeholder="Email Einsender">
+                            <input name="email" type="email" class="form-control" id="inlineFormInputGroupUsername" placeholder="Email Einsender">
                         </div>
                     </div>
                     <div class="col-auto my-1">
