--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -15,7 +15,7 @@
         
     </head>
 
-    <body> 
+    <body class="rs-frontend"> 
         {% include 'components/navigation.html' %}
         {% block body %}
         
