--- a/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
@@ -104,11 +104,41 @@
                         </div>
                         <div class="form-group">
                             {{ form.bild_stein.label }}
-                            {{ form.bild_stein(class_="form-control-file") }}
+                            {{ form.bild_stein(class_="form-control" + (" is-invalid" if form.bild_stein.errors else "")) }}
+                            {% for error in form.bild_stein.errors %}
+                            <div class="invalid-feedback">
+                                {{error}}
+                            </div>
+                            {% endfor %}
+                            {% if stein %}
+                                <img id="img_stein" src="{{ url_for('static', filename='img/steine/'+stein) }}">
+                            {% endif %}
                         </div>
                         <div class="form-group">
                             {{ form.bild_herkunft.label }}
-                            {{ form.bild_herkunft(class_="form-control-file") }}
+                            {{ form.bild_herkunft(class_="form-control" + (" is-invalid" if form.bild_herkunft.errors else "")) }}
+                            {% for error in form.bild_herkunft.errors %}
+                            <div class="invalid-feedback">
+                                {{error}}
+                            </div>
+                            {% endfor %}
+                            {% if herkunft %}
+                                <img id="img_herkunft" src="{{ url_for('static', filename='img/steine/{}'.format(herkunft)) }}">
+                            {% endif %}
+                            <script>
+                                document.getElementById('bild_stein').addEventListener('change', function() {
+                                    if ( this.files.length != 0)
+                                        document.getElementById('img_stein').style.display = 'none';
+                                    else
+                                        document.getElementById('img_stein').style.display = 'block';
+                                });
+                                document.getElementById('bild_herkunft').addEventListener('change', function() {
+                                    if ( this.files.length != 0)
+                                        document.getElementById('img_herkunft').style.display = 'none';
+                                    else
+                                        document.getElementById('img_herkunft').style.display = 'block';
+                                });
+                            </script>
                         </div>
                     </div>
                 </div>
