--- a/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/backend/editStein.html
@@ -103,11 +103,21 @@
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 {{ form.longitude.label }}
-                                {{ form.longitude(class_="form-control") }}
+                                {{ form.longitude(class_="form-control" + (" is-invalid" if form.longitude.errors else "")) }}
+                                {% for error in form.longitude.errors %}
+                                <div class="invalid-feedback">
+                                    {{error}}
+                                </div>
+                                {% endfor %}
                             </div>
                             <div class="form-group col-md-6">
                                 {{ form.latitude.label }}
-                                {{ form.latitude(class_="form-control") }}
+                                {{ form.latitude(class_="form-control" + (" is-invalid" if form.latitude.errors else "")) }}
+                                {% for error in form.latitude.errors %}
+                                <div class="invalid-feedback">
+                                    {{error}}
+                                </div>
+                                {% endfor %}
                             </div>
                         </div>
                         <div class="form-group">
