feat: herkunft bild draggable

--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -40,7 +40,7 @@ h1 {
 h2 {
     font-family: 'Passion One', cursive;
     font-weight: 400;
-    font-size: 2.8rem;
+    font-size: 3.0rem;
     margin: 15px 0 0 0;
     color: rgb(20,80,30);
 }
@@ -48,7 +48,7 @@ h2 {
 h3 {
     font-family: 'Sen', sans-serif;
     font-weight: 400;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin: 0 0 -5px 0;
     color: rgb(20,80,30);
 }
@@ -69,7 +69,7 @@ h4.active {
 .rs-coordinates {
     position: absolute;
     bottom: 20vh;
-    left: 50vw;
+    left: 70vw;
     width: 20vw;
     margin-left: -10vw;
     z-index: 3;
@@ -77,26 +77,35 @@ h4.active {
 }
 
 .rs-content {
-    position: absolute;
-    top: 23vh;
-    left: 20vw;
     z-index: 3;
     text-align: center;
     width: 30vw;
 }
 
 .rs-content>div {
-    position:absolute;
     width: 100%;
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 200;
     font-size: 1.4rem;
     opacity: 0;
+    z-index: 3;
 }
 
-.rs-content .rs-rock {
+.rs-content .rs-bild {
     height: 40vh;
+    position: absolute;
+    top: 23vh;
+    left: 25vw;
+    z-index: 3;
     filter: drop-shadow(5px 5px 5px #222);
+}
+
+.rs-fundort-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    touch-action: none;
+    user-select: none;
 }
 
 
@@ -108,7 +117,7 @@ h4.active {
     right: 30px;
     width:15vw;
     height: 15vh;
-    z-index: 3;
+    z-index: 4;
     display: flex;
     flex-direction: column;
 }
@@ -217,6 +226,7 @@ h4.active {
     max-width: 100%;
     filter: drop-shadow(5px 5px 5px #222);
 }
+
 
 /************************** BACKEND ******************************************/
 .form-group img {
