--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -6,6 +6,6 @@
 <svg id="svg" class="overlay" width="100%" height="100%">
     <path id="svg-path" />
 </svg>
-<div id="rs-content"></div>
+<div id="rs-body"></div>
 
 {% endblock %}
