--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang={{g.lang_code}}>
 
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="{% block metadescription %}{% endblock %}">
 
-        <title>Reisesteine</title>
+        <title>Home - Reisesteine</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
 
 
