--- a/project/blueprints/reisesteine/templates/reisesteine/home.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/home.html
@@ -4,6 +4,12 @@
 
 <div id="map"></div>
 <svg id="svg" class="overlay" width="100%" height="100%">
+    <defs>
+        <radialGradient id="gradientDefinition" >
+            <stop stop-color="white" offset="0%" stop-opacity="1" />
+            <stop stop-color="transparent" offset="100%" stop-opacity="0" />
+        </radialGradient>
+    </defs>
     <path id="svg-path" />
 </svg>
 <div id="rs-body" data-stein="{{id}}"></div>
