--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -323,7 +323,7 @@ h4.active {
 }
 
 .rs-reisesteine>div {
-    margin: 100px;
+    margin: 25px 100px;
     height: 300px;
     width: 300px;
     background-color: white;
